--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@phading/user_session_service_interface",
   "version": "0.1.0",
-  "description": "The interface of UserService.",
+  "description": "The web and backend interfaces of UserSessionService.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/phading-dev/user_session_service_interface.git"
