--- a/backend/interface.yaml
+++ b/backend/interface.yaml
@@ -38,16 +38,18 @@
 - message:
     name: ExchangeSessionAndCheckCapabilityResponse
     fields:
-      - name: userSession
-        type: UserSession
-        import: ./backend/user_session
+      - name: userId
+        type: string
         index: 1
+      - name: accountId
+        type: string
+        index: 2
       - name: canConsumeShows
         type: boolean
-        index: 2
+        index: 3
       - name: canPublishShows
         type: boolean
-        index: 3
+        index: 4
 - nodeService:
     name: UserSessionBackendService
     remoteCalls:
