--- a/node/interface.yaml
+++ b/node/interface.yaml
@@ -1,65 +1,65 @@
-- enum:
-    name: AccountType
-    values:
-      - name: CONSUMER
-        value: 1
-      - name: PUBLISHER
-        value: 2
-- message:
-    name: CreateSessionRequestBody
-    fields:
-      - name: userId
-        type: string
-        index: 1
-      - name: accountId
-        type: string
-        index: 2
-      - name: accountType
-        type: AccountType
-        index: 3
-- message:
-    name: CreateSessionResponse
-    fields:
-      - name: signedSession
-        type: string
-        index: 1
-- message:
-    name: ExchangeSessionAndCheckCapabilityRequestBody
-    fields:
-      - name: signedSession
-        type: string
-        index: 1
-      - name: checkCanConsumeShows
-        type: boolean
-        index: 2
-      - name: checkCanPublishShows
-        type: boolean
-        index: 3
-- message:
-    name: ExchangeSessionAndCheckCapabilityResponse
-    fields:
-      - name: userId
-        type: string
-        index: 1
-      - name: accountId
-        type: string
-        index: 2
-      - name: canConsumeShows
-        type: boolean
-        index: 3
-      - name: canPublishShows
-        type: boolean
-        index: 4
-- nodeService:
-    name: UserSessionNodeService
-    remoteCalls:
-      - name: CreateSession
-        path: /CreateSession
-        body: CreateSessionRequestBody
-        response: CreateSessionResponse
-      - name: ExchangeSessionAndCheckCapability
-        path: /ExchangeSessionAndCheckCapability
-        body: ExchangeSessionAndCheckCapabilityRequestBody
-        response: ExchangeSessionAndCheckCapabilityResponse
-    outputClient: ./node/client
-    outputHandler: ./node/handler
+- kind: Enum
+  name: AccountType
+  values:
+    - name: CONSUMER
+      value: 1
+    - name: PUBLISHER
+      value: 2
+- kind: Message
+  name: CreateSessionRequestBody
+  fields:
+    - name: userId
+      type: string
+      index: 1
+    - name: accountId
+      type: string
+      index: 2
+    - name: accountType
+      type: AccountType
+      index: 3
+- kind: Message
+  name: CreateSessionResponse
+  fields:
+    - name: signedSession
+      type: string
+      index: 1
+- kind: Message
+  name: ExchangeSessionAndCheckCapabilityRequestBody
+  fields:
+    - name: signedSession
+      type: string
+      index: 1
+    - name: checkCanConsumeShows
+      type: boolean
+      index: 2
+    - name: checkCanPublishShows
+      type: boolean
+      index: 3
+- kind: Message
+  name: ExchangeSessionAndCheckCapabilityResponse
+  fields:
+    - name: userId
+      type: string
+      index: 1
+    - name: accountId
+      type: string
+      index: 2
+    - name: canConsumeShows
+      type: boolean
+      index: 3
+    - name: canPublishShows
+      type: boolean
+      index: 4
+- kind: NodeService
+  name: UserSessionNodeService
+  remoteCalls:
+    - name: CreateSession
+      path: /CreateSession
+      body: CreateSessionRequestBody
+      response: CreateSessionResponse
+    - name: ExchangeSessionAndCheckCapability
+      path: /ExchangeSessionAndCheckCapability
+      body: ExchangeSessionAndCheckCapabilityRequestBody
+      response: ExchangeSessionAndCheckCapabilityResponse
+  outputClient: ./node/client
+  outputHandler: ./node/handler
