--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@phading/user_session_service_interface",
-  "version": "0.10.1",
+  "version": "0.11.0",
   "description": "The web and backend interfaces of UserSessionService.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/phading-dev/user_session_service_interface.git"
   },
-  "author": "Yuxuan Xie <teststaybaka@gmail.com> (http://www.yuxuanxie.com)",
+  "author": "Yuxuan Xie <ykuyo.dev@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/phading-dev/user_session_service_interface/issues"
@@ -18,13 +18,13 @@
     "**/*.yaml"
   ],
   "devDependencies": {
-    "@selfage/generator_cli": "^4.0.1",
+    "@selfage/generator_cli": "^4.0.4",
     "@selfage/tsconfig": "^1.1.0",
     "@types/node": "^22.5.4",
     "typescript": "^5.6.2"
   },
   "dependencies": {
-    "@selfage/message": "^3.5.6",
+    "@selfage/message": "^3.5.7",
     "@selfage/service_descriptor": "^4.3.1"
   }
 }
